Bump Java version from 17 to 19